# SHORT-COVER-CASCADE_

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.bat  scenarios.md  update_dashboard.bat  update_shadow_sl.bat
config/: config.yaml  secrets.env.example
data/: schema.md
docs/: ShortCoverCascade_v3.1_FINAL.docx  ShortCoverCascade_v3.1_FINAL.md  expiry_calendar.md  known_indicator_values.md
docs/phases/: PHASE_0.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_5A.md  PHASE_5B.md  PHASE_5C.MD  PHASE_5D.md  PHASE_5_2_FINAL.md  PHASE_6_1.md  (+2 more)
frontend/: .gitignore  requirements.txt  run_ui.bat
scripts/: check_conditions.py  check_indicators.py  check_risk.py  feed_healthcheck.py  list_expiries.py  mark_holiday_scans.py  migrate_relation_labels.py  refresh_token_kite.py  refresh_token_upstox.py  test_telegram.py  update_dashboard.py  update_shadow_sl.py
src/: config_loader.py  main.py
tests/: conftest.py  test_c1_extended_zone.py  test_conditions.py  test_dashboard_data_writer.py  test_dashboard_excel_builder.py  test_dashboard_remarks.py  test_directional_gap.py  test_expiry_resolver.py  test_feed_factory.py  test_indicators.py  test_kite_feed.py  test_lot_split.py  test_orchestrator.py  test_outcome_replay.py  test_paper_engine.py  test_paper_episodes.py  test_paper_outcome.py  test_paper_persistence.py  test_paper_selector.py  test_phase5b_fixes.py  test_risk.py  test_shadow_sl.py  test_signal_logger.py  test_sl_method3.py  test_sl_method_comparison.py  test_telegram.py  test_upstox_feed.py
(+151 files in other folders)
