[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "short-cover-cascade"
version = "0.1.0"
description = "Telegram alert bot for the Short Cover Cascade strategy on NIFTY/BankNifty options"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Rohit Pagar" }]
dependencies = [
    "upstox-python-sdk>=2.27.0",
    "kiteconnect>=5.0.1",
    "python-telegram-bot>=21.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.5",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
